<?xml version="1.0" encoding="utf-8"?><!-- Aileen Berwick
    Score Keeper app: Lesson 9
    March, 20, 2018
    Grow With Google Challenge Scholarship: Android Basics
   --><!--The Framework
Each tennis match is made up of two to three sets. To win a set, you must win at least six games.
The games are scored starting at "love" (or zero) and go up to 40, but that's actually just four points.
From love, the first point is 15, then 30, then 40, then game point, which wins the game.
***Layout for the tennis score counter.-->


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/player_a"
                android:textColor="#000000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:paddingBottom="24dp"
                android:text="@string/_0"
                android:textColor="#DC143C"
                android:textSize="28sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="oneForPlayerA"
                android:text="@string/_15"
                android:textColor="#000000" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="twoForPlayerA"
                android:text="@string/_30"
                android:textColor="#000000" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"

                android:onClick="threeForPlayerA"
                android:text="@string/_40"
                android:textColor="#000000" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="winForPlayerA"
                android:gravity="center"
                android:text="@string/game_point"
                android:textSize="14sp" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="25dp"
            android:layout_marginTop="16dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/player_b"
                android:textColor="#000000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:paddingBottom="24dp"
                android:text="@string/_0"
                android:textColor="#DC143C"
                android:textSize="28sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity = "center"
                android:onClick="oneForPlayerB"
                android:text="@string/_15"
                android:textColor="#000000"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity = "center"
                android:onClick="twoForPlayerB"
                android:text="@string/_30"
                android:textColor="#000000"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity = "center"
                android:onClick="threeForPlayerB"
                android:text="@string/_40"
                android:textColor="#000000"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="winForPlayerB"
                android:text="Game Point"
                android:layout_gravity = "top"
                android:textSize="14sp" />

        </LinearLayout>
    </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:src="@drawable/tennis"
            android:layout_alignParentBottom = "true"
            android:layout_centerHorizontal ="true"
            />

         <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/tennis_ball"
            android:onClick="resetScore"
            android:text="@string/reset"
            android:textColor="#000000"
            android:layout_centerHorizontal = "true"
            android:layout_marginTop="15dp"
         />

</RelativeLayout>